--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "ahmadhasnain",
     "password": null,
-    "database": "demo_project",
+    "database": "lms",
     "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres"
@@ -10,7 +10,7 @@
   "test": {
     "username": "ahmadhasnain",
     "password": null,
-    "database": "demo_project",
+    "database": "lms",
     "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres"
