--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
+    "node-cron": "^3.0.0",
+    "node-mailer": "^0.1.1",
     "pg": "^8.7.1",
     "sequelize": "^6.13.0",
     "swagger-jsdoc": "^6.1.0",
